--- a/01_AutomationTest_Learn_V0.1/Utilities/Project1/Common/DoubleUI/02_TypingS.xaml
+++ b/01_AutomationTest_Learn_V0.1/Utilities/Project1/Common/DoubleUI/02_TypingS.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="_01_TypingInvoice" mva:VisualBasic.Settings="{x:Null}" sap2010:WorkflowViewState.IdRef="_01_TypingInvoice_1"
+<Activity mc:Ignorable="sap sap2010" x:Class="_02_TypingD" mva:VisualBasic.Settings="{x:Null}" sap2010:WorkflowViewState.IdRef="_02_TypingD_1"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" 
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
  xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
@@ -52,7 +52,7 @@
             <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
         </sco:Collection>
     </TextExpression.ReferencesForImplementation>
-    <Sequence DisplayName="_01_TypingInvoice" sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence DisplayName="_02_TypingD" sap2010:WorkflowViewState.IdRef="Sequence_1">
         <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
